--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  padding-top: 54px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
 }
