--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
   padding-top: 54px;
 }
 
+.roles-array span:not(:first-child):before {
+  content: ", ";
+}
+
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
