--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,53 @@
 *{
-  margin: 0;
-  padding: 0
+  	margin: 0;
+  	padding: 0
 }
 
 body {
-  padding-top: 54px;
+  	padding-top: 54px;
 }
 
 .roles-array span:not(:first-child):before {
-  content: ", ";
+  	content: ", ";
 }
 
 .toast {
-  min-width: 250px;
+  	min-width: 250px;
 }
 
 .toast:first-child {
-  margin-top: 0.75rem;
+  	margin-top: 0.75rem;
 }
 
 .page-link {
-  cursor: pointer;
+  	cursor: pointer;
 }
 
 .notification-type {
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    width: 1.25rem;
-    height: 1.25rem;
+  	border: 1px solid transparent;
+  	border-radius: 0.25rem;
+  	width: 1.25rem;
+  	height: 1.25rem;
+}
+
+.form-control:focus {
+  	box-shadow: none;
 }
 
 .close,
 .close:focus,
 input[type="button"]:focus {
-  outline: none;
+  	outline: none;
+}
+
+@media (min-width: 768px) {
+  	.search-co-ownership {
+  	  	width: 50%;
+  	}
 }
 
 @media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
+  	body {
+  	  	padding-top: 56px;
+  	}
 }
